# OOP-CourseWork

./: README.md  config.py  main.py  pyproject.toml
src/: abs_classes.py  api.py  json_worker.py  utils.py  vacancy.py
